[package]
name = "neo4rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.6.0"
uuid = {version = "1.3.3" , features = ["v4"] } 

actix-web = "4.3.0"
env_logger = "0.10.0" 
dotenvy = "0.15.7"       
serde_derive = "1.0.163"   
jsonwebtoken = "8.3.0"        
serde = "1.0.163"  
argon2 = "0.5.0"          
chrono = "0.4.24"         
serde_json = "1.0.96"     
async-graphql = "5.0.9"     
async-graphql-actix-web = "5.0.9" 
futures = "0.3.28"   
async-stream = "0.3.5"  